# code-agent-runtime

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml
docs/: ARCHITECTURE.md  LIMITATIONS.md  METHODOLOGY.md  PLAN.md  REPRODUCIBILITY.md  RESEARCH_QUESTIONS.md  RESULTS.md  SECURITY_MODEL.md
docs/commits/: 00-scaffold.md  01-environment-hygiene.md  02-task-format.md  03-tool-registry.md  04-runtime-loop.md
docs/milestones/: 00-scaffold.md  01-environment-hygiene.md  02-task-format.md  03-tool-registry.md  04-runtime-loop.md
docs/prompts/: initial-agent-task.md  run-one-milestone-template.md
docs/review_notes/: 00-scaffold-human-review.md  01-environment-hygiene-human-review.md  02-task-format-human-review.md  03-tool-registry-human-review.md  04-runtime-loop-human-review.md
examples/tiny_cli_project/: README.md  greet.py  test_greet.py
examples/tiny_python_bug/: README.md  summation.py  test_summation.py
examples/unsafe_command_demo/: README.md  app.py
scripts/: 00_check_environment.py  04_check_repo_hygiene.py  run_all_milestones_with_claude.sh  serve_site.sh
site/: architecture.html  evals.html  index.html  limitations.html  results.html  roadmap.html  sandboxing.html  security.html  style.css  task-format.html  tracing-replay.html
src/code_agent_runtime/: __init__.py  __main__.py  cli.py  environment.py  hygiene.py
tasks/: README.md
tasks/bugfix/: sum-range-off-by-one.task.json
tasks/cli/: add-shout-flag.task.json
tests/: test_environment.py  test_hygiene.py  test_runtime.py  test_scaffold_layout.py  test_smoke.py  test_tasks.py  test_tools.py
(+26 files in other folders)
